k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: default-http-backend
      port:
        number: 80
  ingressClassName: nginx-example
  rules:
    - host: lenneflow.local
    - http:
        paths:
          - path: /account
            pathType: Prefix
            backend:
              service:
                name: account-service
                port:
                  number: 47001
          - path: /execution
            pathType: Prefix
            backend:
              service:
                name: execution-service
                port:
                  number: 47002
          - path: /task
            pathType: Prefix
            backend:
              service:
                name: task-service
                port:
                  number: 47003
          - path: /worker
            pathType: Prefix
            backend:
              service:
                name: worker-service
                port:
                  number: 47004
          - path: /workflow
            pathType: Prefix
            backend:
              service:
                name: workflow-service
                port:
                  number: 47005
